--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
-        "bootstrap": "^5.3.3"
+        "bootstrap": "^5.3.3",
+        "particles.js": "^2.0.0"
     }
 }
